fixed overlap on searchbar, mainpage and searchbar. Added test links for faster debugging of router

--- a/CWCP-Frontend/src/MAINPAGE/main.css
+++ b/CWCP-Frontend/src/MAINPAGE/main.css
@@ -1,7 +1,11 @@
 .main{
-  height: 120vh;
-  width: 100%;
-  justify-content: space-evenly;
+  display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    box-sizing: border-box;
 }
 .report-btn {
   margin: 10px 30px;
@@ -13,6 +17,7 @@
   font-size: 16px;
   font-weight: bold;
   cursor: pointer;
+  text-decoration: none;
 }
 
 .report-btn:hover {
