--- a/CWCP-Frontend/src/SEARCHBAR/searchbar.css
+++ b/CWCP-Frontend/src/SEARCHBAR/searchbar.css
@@ -5,12 +5,14 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  
 }
 
 
 .header h1 {
   color: #1f3d1f;
   font-size: 24px;
+  margin-left:50px;
 }
 
 
