--- a/CWCP-Frontend/src/index.css
+++ b/CWCP-Frontend/src/index.css
@@ -15,5 +15,5 @@ body{
     width: 100%;
     height: 100%;
     padding: 20px;
-
+    margin-left: 220px;
 }
